--- a/GS/index.html
+++ b/GS/index.html
@@ -53,10 +53,13 @@
     <!-- The line below must be kept intact for Sencha Command to build your application -->
     <script id="microloader" type="text/javascript" src="sdk/microloader/development.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script type="text/javascript" src="resources/lib/async.js"></script>
 
 </head>
 <body>
     <div id="appLoadingIndicator">
+        <div></div>
+        <div></div>
         <div></div>
         <div></div>
         <div></div>
